--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
+    "@babel/core": "7.3.4",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.3.4",
+    "babel-loader": "8.0.5",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "moment": "2.24.0",
+    "moment-locales-webpack-plugin": "1.0.7",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1"
